--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <div class="mt-1 mb-4">
       <div class="input-group">
         <input type="text" id="postal_code_input" class="form-control" placeholder="Enter postal code">
-        <button class="btn btn-primary" onclick="searchByPostalCode()">Search by Postal Code</button>
+        <button class="btn btn-primary" onclick="searchByPostalCode()">Search by Postal</button>
       </div>
     </div>
 
