--- a/index.html
+++ b/index.html
@@ -129,8 +129,16 @@
       <td>${entry.address} ${entry.postal}</td>
     </tr>
     <tr>
-      <td>ETA</td>
-      <td>${entry.island_group || 'No Data Yet'} ${entry.lead_time || 'No Data Yet'}</td>
+      <td>Island Group</td>
+      <td>${entry.island_group || 'No Data Yet'}</td>
+    </tr>
+    <tr>
+      <td>Standard ETA</td>
+      <td>${entry.lead_time || 'No Data Yet'}</td>
+    </tr>
+    <tr>
+      <td>Delivery After Flight</td>
+      <td>${entry.lbc_days || 'No Data Yet'}</td>
     </tr>
   </tbody>
 </table>
@@ -178,8 +186,16 @@
       <td>${entry.address} ${entry.postal}</td>
     </tr>
     <tr>
-      <td>ETA</td>
-      <td>${entry.island_group || 'No Data Yet'} ${entry.lead_time || 'No Data Yet'}</td>
+      <td>Island Group</td>
+      <td>${entry.island_group || 'No Data Yet'}</td>
+    </tr>
+    <tr>
+      <td>Standard ETA</td>
+      <td>${entry.lead_time || 'No Data Yet'}</td>
+    </tr>
+    <tr>
+      <td>Delivery After Flight</td>
+      <td>${entry.lbc_days || 'No Data Yet'}</td>
     </tr>
   </tbody>
 </table>
