--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
       <td>${entry.address} ${entry.postal}</td>
     </tr>
     <tr>
-      <td>Island Group</td>
+      <td>Group</td>
       <td>${entry.island_group || 'No Data Yet'}</td>
     </tr>
     <tr>
-      <td>Standard ETA</td>
+      <td>ETA</td>
       <td>${entry.lead_time || 'No Data Yet'}</td>
     </tr>
     <tr>
-      <td>Delivery After Flight</td>
+      <td>SLA</td>
       <td>${entry.lbc_days || 'No Data Yet'}</td>
     </tr>
   </tbody>
@@ -186,15 +186,15 @@
       <td>${entry.address} ${entry.postal}</td>
     </tr>
     <tr>
-      <td>Island Group</td>
+      <td>Group</td>
       <td>${entry.island_group || 'No Data Yet'}</td>
     </tr>
     <tr>
-      <td>Standard ETA</td>
+      <td>ETA</td>
       <td>${entry.lead_time || 'No Data Yet'}</td>
     </tr>
     <tr>
-      <td>Delivery After Flight</td>
+      <td>SLA</td>
       <td>${entry.lbc_days || 'No Data Yet'}</td>
     </tr>
   </tbody>
